reste de sprint 1 (matieres premiers)