@@ -13,7 +13,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,25 +24,36 @@ public class HuilerieService {
     private final HuilerieMapper huilerieMapper;
 
     public HuilerieDTO create(HuilerieCreateDTO dto) {
-        Huilerie huilerie = huilerieMapper.toEntity(dto);
+        if (huilerieRepository.existsByNom(dto.getNom())) {
+            throw new RuntimeException("Une huilerie avec ce nom existe deja");
+        }
 
+        Huilerie huilerie = huilerieMapper.toEntity(dto);
         Entreprise entreprise = entrepriseRepository.findById(dto.getEntrepriseId())
-                .orElseThrow(() -> new RuntimeException("Entreprise non trouvée"));
+                .orElseThrow(() -> new RuntimeException("Entreprise non trouvee"));
         huilerie.setEntreprise(entreprise);
 
         Huilerie saved = huilerieRepository.save(huilerie);
         return huilerieMapper.toDTO(saved);
     }
 
-    public HuilerieDTO update(Long id, HuilerieUpdateDTO dto) {
-        Huilerie huilerie = huilerieRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Huilerie non trouvée"));
+    public HuilerieDTO update(Long idHuilerie, HuilerieUpdateDTO dto) {
+        Huilerie huilerie = huilerieRepository.findById(idHuilerie)
+                .orElseThrow(() -> new RuntimeException("Huilerie non trouvee"));
+
+        if (dto.getNom() != null) {
+            huilerieRepository.findByNom(dto.getNom())
+                    .filter(existing -> !existing.getIdHuilerie().equals(idHuilerie))
+                    .ifPresent(existing -> {
+                        throw new RuntimeException("Une huilerie avec ce nom existe deja");
+                    });
+        }
 
         huilerieMapper.updateFromDTO(dto, huilerie);
 
         if (dto.getEntrepriseId() != null) {
             Entreprise entreprise = entrepriseRepository.findById(dto.getEntrepriseId())
-                    .orElseThrow(() -> new RuntimeException("Entreprise non trouvée"));
+                    .orElseThrow(() -> new RuntimeException("Entreprise non trouvee"));
             huilerie.setEntreprise(entreprise);
         }
 
@@ -51,29 +61,30 @@ public class HuilerieService {
         return huilerieMapper.toDTO(saved);
     }
 
-    public void activate(Long id) {
-        Huilerie huilerie = huilerieRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Huilerie non trouvée"));
+    public void activate(Long idHuilerie) {
+        Huilerie huilerie = huilerieRepository.findById(idHuilerie)
+                .orElseThrow(() -> new RuntimeException("Huilerie non trouvee"));
         huilerie.setActive(true);
         huilerieRepository.save(huilerie);
     }
 
-    public void deactivate(Long id) {
-        Huilerie huilerie = huilerieRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Huilerie non trouvée"));
+    public void deactivate(Long idHuilerie) {
+        Huilerie huilerie = huilerieRepository.findById(idHuilerie)
+                .orElseThrow(() -> new RuntimeException("Huilerie non trouvee"));
         huilerie.setActive(false);
         huilerieRepository.save(huilerie);
     }
 
-    public HuilerieDTO findById(Long id) {
-        Huilerie huilerie = huilerieRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Huilerie non trouvée"));
+    public HuilerieDTO findById(Long idHuilerie) {
+        Huilerie huilerie = huilerieRepository.findById(idHuilerie)
+                .orElseThrow(() -> new RuntimeException("Huilerie non trouvee"));
         return huilerieMapper.toDTO(huilerie);
     }
 
     public List<HuilerieDTO> findAll() {
         return huilerieRepository.findAll().stream()
                 .map(huilerieMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
+
